--- a/components/weatherInfo/styles.module.css
+++ b/components/weatherInfo/styles.module.css
@@ -6,7 +6,7 @@
 .weatherCard {
   display: flex;
   gap: 20px;
-  align-items: center;
+  align-items: flex-start;
   background-color: #f5f5f5;
   padding: 20px;
   border-radius: 8px;
