--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -27,7 +27,7 @@
   font-weight: bold;
   text-align: center;
   transition: background-color 0.3s ease;
-  width: 100%;
+  width: 330px;
   box-sizing: border-box;
 }
 
