--- a/components/weatherInfo/styles.module.css
+++ b/components/weatherInfo/styles.module.css
@@ -1,6 +1,29 @@
+.skeletonWrapper {
+  animation: skeleton-loading 1s linear infinite alternate;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(200, 20%, 80%);
+  }
+  100% {
+    background-color: hsl(200, 20%, 95%);
+  }
+}
+
+.loadingText {
+  font-size: 18px;
+  color: #333;
+  text-align: center;
+  margin: 0 auto;
+}
+
 .container {
   padding: 20px;
   border-radius: 10px;
+  width: 330px;
 }
 
 .weatherCard {
@@ -11,6 +34,7 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  height: 130px;
 }
 
 .weatherIcon {
@@ -25,6 +49,7 @@
 
 .title {
   font-size: 24px;
+  margin-top: 0;
   margin-bottom: 10px;
 }
 
