--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -29,6 +29,7 @@
   transition: background-color 0.3s ease;
   width: 330px;
   box-sizing: border-box;
+  border: none;
 }
 
 .recommendButton:hover {
