--- a/components/userInput/styles.module.css
+++ b/components/userInput/styles.module.css
@@ -1,9 +1,7 @@
-/* UserInputForm.module.css */
-
 .form {
-  max-width: 400px;
   margin: 0 auto;
   padding: 20px;
+  width: 330px;
 }
 
 .questionGroup {
@@ -18,11 +16,12 @@
 
 .buttonGroup {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 10px;
 }
 
 .buttonGroup button {
+  width: 100%;
   padding: 12px 20px;
   border: 2px solid #007bff;
   border-radius: 25px;
