--- a/components/weatherInfo/styles.module.css
+++ b/components/weatherInfo/styles.module.css
@@ -19,21 +19,17 @@
   margin: 0 auto;
 }
 
-.container {
-  padding: 20px;
-  border-radius: 10px;
-  width: 330px;
-}
-
 .weatherCard {
   display: flex;
-  gap: 17px;
+  gap: 10%;
   align-items: flex-start;
+  width: 100%;
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  height: 130px;
+  margin-bottom: 20px;
+  box-sizing: border-box;
 }
 
 .weatherIcon {
