--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   max-width: 480px;
   margin: 0 auto;
   padding: 0 20px;
@@ -7,6 +8,7 @@
   flex-direction: column;
   background-color: #f8f9fa;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 
 .header {
