--- a/components/hamburgerMenu/styles.module.css
+++ b/components/hamburgerMenu/styles.module.css
@@ -2,6 +2,11 @@
   cursor: pointer;
 }
 
+.hamburgerBtn .material-icons {
+  font-size: 24px;
+  color: #333;
+}
+
 .sideNav {
   position: absolute;
   top: 0;
