Feat: 검색 버튼 icon 추가

--- a/components/hamburgerMenu/styles.module.css
+++ b/components/hamburgerMenu/styles.module.css
@@ -19,4 +19,12 @@
 
 .sideNav.open {
   left: 0;
+  padding: 35px 40px;
+}
+
+.searchButton {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  border: none;
 }
