--- a/components/hamburgerMenu/styles.module.css
+++ b/components/hamburgerMenu/styles.module.css
@@ -10,16 +10,16 @@
 .sideNav {
   position: absolute;
   top: 0;
-  left: -250px;
-  width: 250px;
+  left: -300px;
+  width: 300px;
   height: 100%;
   background-color: #f1f1f1;
   transition: left 0.3s ease;
+  padding: 35px 40px;
 }
 
 .sideNav.open {
   left: 0;
-  padding: 35px 40px;
 }
 
 .searchButton {
@@ -27,4 +27,10 @@
   display: flex;
   justify-content: flex-end;
   border: none;
+}
+
+.locationList {
+}
+
+.location {
 }
