Style: 스타일 수정, bm에 링크 추가

--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -15,15 +15,18 @@
   display: flex;
   justify-content: center;
   flex-direction: row;
-  align-items: end;
+  align-items: flex-end;
   padding: 1.5rem 0;
+}
+
+.header .headerLogo {
+  flex: 2;
 }
 
 .header h1 {
   text-align: center;
   font-size: 30px;
   font-weight: 600;
-  flex: 2;
 }
 
 .headerContent {
