--- a/components/hamburgerMenu/styles.module.css
+++ b/components/hamburgerMenu/styles.module.css
@@ -10,8 +10,8 @@
 .sideNav {
   position: absolute;
   top: 0;
-  left: -300px;
-  width: 300px;
+  left: -100%;
+  width: 100%;
   height: 100%;
   background-color: #f1f1f1;
   transition: left 0.3s ease;
@@ -22,8 +22,25 @@
   left: 0;
 }
 
-.searchButton {
+.innerForm {
+  display: flex;
+  padding: 11px 13px;
+  border: 1px solid #000;
+  background: #fff;
+}
+
+.inputForm {
+  border: none;
   width: 100%;
+}
+/* 
+.resetButton {
+
+} */
+
+.resetButton,
+.searchButton {
+  width: 30px;
   display: flex;
   justify-content: flex-end;
   border: none;
