--- a/components/weatherInfo/styles.module.css
+++ b/components/weatherInfo/styles.module.css
@@ -83,3 +83,70 @@
   font-size: 15px;
   margin: 5px 0;
 }
+
+.errorContainer {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  flex-direction: column;
+  background-color: #fff;
+  width: 100%;
+  height: 170px;
+  padding: 1rem 2rem;
+}
+
+.errorMessage {
+  text-align: center;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+
+.retryButton {
+  margin: 0 auto;
+  width: fit-content;
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
+  border: none;
+  background-color: #f4c542;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.retryButton:hover {
+  animation: shake 0.4s infinite;
+}
