feat: 추천 결과 페이지 마크업 및 스타일링 (WIP)

--- a/app/globals.css
+++ b/app/globals.css
@@ -179,3 +179,15 @@ button {
 input:focus {
   outline: none;
 }
+
+.splide {
+  padding: 4rem 0;
+}
+
+.splide__slide:not(.is-active) {
+  transform: scale(0.9) !important;
+}
+
+.splide__slide.is-visible {
+  background-color: #fff;
+}
