--- a/app/result/styles.module.css
+++ b/app/result/styles.module.css
@@ -1,3 +1,25 @@
+.recommendation {
+  width: 100%;
+  height: 500px;
+}
+
+.skeletonWrapper,
+.react-loading-skeleton {
+  width: 100%;
+  animation: skeleton-loading 1s linear infinite alternate;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(200, 20%, 80%);
+  }
+  100% {
+    background-color: hsl(200, 20%, 95%);
+  }
+}
+
 .title {
   font-size: 1.5rem;
   font-weight: bold;
@@ -20,6 +42,7 @@
 .description {
   font-size: 1rem;
   color: #666;
+  line-height: 1.5;
 }
 
 .tipTitle {
@@ -28,7 +51,13 @@
   margin-bottom: 0.5rem;
 }
 
+.tipTitle {
+  font-weight: 500;
+  font-size: 1.3rem;
+}
+
 .tipContents {
+  margin-top: 1rem;
   font-weight: 500;
   line-height: 1.5;
   font-style: italic;
