--- a/components/carousel/styles.module.css
+++ b/components/carousel/styles.module.css
@@ -10,10 +10,12 @@
 .category {
   font-size: 1.5rem;
   font-weight: 600;
+  color: #000;
 }
 
 .desc {
   margin-top: 1rem;
   line-height: 1.5;
   font-size: 0.9rem;
+  color: #000;
 }
