--- a/components/carousel/styles.module.css
+++ b/components/carousel/styles.module.css
@@ -1,16 +1,20 @@
 .card {
-  /* width: 220px !important; */
-  /* height: 285px; */
+  background-color: #fff;
   border-radius: 13px;
+  min-height: 200px;
   border: 1px solid #ffb347;
   padding: 1rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 70%;
 }
 
 .category {
   font-size: 1.5rem;
   font-weight: 600;
   color: #000;
+}
+
+.imageKey {
+  margin-top: 5px;
 }
 
 .desc {
@@ -22,17 +26,35 @@
 
 .swiperWrapper {
   position: relative;
+  border-bottom: 1px solid #dbd9d9;
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+  margin-top: 1rem;
 }
 
-.swiper-navigation {
-  position: absolute !important;
-  bottom: 0 !important;
+.swiper-slide {
+  transition: transform 0.3s ease-in-out;
 }
 
-.swiper-button-prev,
-.swiper-button-next {
-  position: absolute;
-  top: 10% !important;
-  background: none !important;
-  border: none !important;
+.swiperNavigation {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.swiperNavigation button {
+  background: none;
+  border: none;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+.swiperNavigation button svg {
+  font-size: 35px;
 }
